--- a/app/src/main/res/layout/activity_workorder_filters.xml
+++ b/app/src/main/res/layout/activity_workorder_filters.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -37,7 +38,7 @@
                 android:letterSpacing="0.025"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="@string/my_workorders"
+                android:text="My Ideas"
                 android:textColor="@color/md_dark_green"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/bToday"
@@ -80,73 +81,6 @@
                 app:layout_constraintStart_toEndOf="@+id/bToday"
                 app:layout_constraintTop_toTopOf="@+id/bToday" />
 
-            <TextView
-                android:id="@+id/tvLabelType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/inter_medium"
-                android:text="@string/type"
-                android:textColor="@color/Color.Default"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bMyWorkorders" />
-
-            <Button
-                android:id="@+id/bUnplanned"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/selector_unplanned_button_normal"
-                android:fontFamily="@font/inter_semi_bold"
-                android:letterSpacing="0.025"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:text="@string/unplanned"
-                android:textColor="@color/md_dark_green"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/bPlanned"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvLabelType" />
-
-            <Button
-                android:id="@+id/bPlanned"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_planned_button_normal"
-                android:fontFamily="@font/inter_semi_bold"
-                android:letterSpacing="0.025"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:text="@string/planned"
-                android:textColor="@color/md_dark_green"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/bPredictive"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/bUnplanned"
-                app:layout_constraintTop_toTopOf="@+id/bUnplanned" />
-
-            <Button
-                android:id="@+id/bPredictive"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_predictive_button_normal"
-                android:fontFamily="@font/inter_semi_bold"
-                android:letterSpacing="0.025"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:text="@string/predictive"
-                android:textColor="@color/md_dark_green"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/bPlanned"
-                app:layout_constraintTop_toTopOf="@+id/bPlanned" />
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clEmployee"
                 android:layout_width="0dp"
@@ -155,7 +89,7 @@
                 android:background="@color/md_white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bPlanned">
+                app:layout_constraintTop_toBottomOf="@+id/bMyWorkorders">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -164,7 +98,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/inter_medium"
-                    android:text="@string/employee"
+                    android:text="Idea Creator"
                     android:textColor="@color/Color.Default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -265,158 +199,14 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clAsset"
+                android:id="@+id/clCategory"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
-                android:layout_marginTop="1dp"
+                android:layout_marginTop="2dp"
                 android:background="@color/md_white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/clStatus">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/inter_medium"
-                    android:text="@string/asset"
-                    android:textColor="@color/Color.Default"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvAssetSelected"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/inter_regular"
-                    android:hint="@string/select_one_or_more"
-                    android:textColor="@color/md_dark_green"
-                    android:textColorHint="@color/hint_text_color"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <LinearLayout
-                android:id="@+id/llSwIncludeChildrenAssets"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/clAsset">
-
-                <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/swIncludeChildrenAssets"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter_medium"
-                    android:text="@string/include_children_assets" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llSwIncludeChecklistAssets"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/llSwIncludeChildrenAssets">
-
-                <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/swIncludeChklistAssets"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter_medium"
-                    android:text="@string/include_assets_added_in_checklist"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvLabelPriority"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/inter_medium"
-                android:text="@string/priority"
-                android:textColor="@color/Color.Default"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/llSwIncludeChecklistAssets" />
-
-            <Button
-                android:id="@+id/bLow"
-                android:layout_width="56dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/selector_prioritylow_button_normal"
-                android:text="@string/_0"
-                android:textColor="@color/md_dark_green"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvLabelPriority" />
-
-            <Button
-                android:id="@+id/bMedium"
-                android:layout_width="56dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/selector_prioritymedium_button_normal"
-                android:text="@string/exclamation_sign"
-                android:textColor="@color/md_dark_green"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/bLow"
-                app:layout_constraintTop_toTopOf="@+id/bLow" />
-
-            <Button
-                android:id="@+id/bHigh"
-                android:layout_width="56dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/selector_priorityhigh_button_normal"
-                android:text="@string/double_exclamation_sign"
-                android:textColor="@color/md_dark_green"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/bMedium"
-                app:layout_constraintTop_toTopOf="@+id/bMedium" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clCategory"
-                android:layout_width="0dp"
-                android:layout_height="56dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/md_white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bLow">
 
                 <TextView
                     android:layout_width="wrap_content"
