--- a/app/src/main/res/layout/activity_new_workorder.xml
+++ b/app/src/main/res/layout/activity_new_workorder.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:fontFamily="@font/inter_medium"
-            android:hint="@string/enter_workorder_name"
+            android:hint="Enter Idea Name"
             android:inputType="textPersonName"
             android:padding="10dp"
             android:paddingStart="4dp"
@@ -119,7 +119,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/inter_regular"
-            android:text="@string/employee_star"
+            android:text="Idea Creators"
             android:textColor="@color/hint_text_color"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/tvEmployee"
@@ -133,7 +133,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="20dp"
             android:gravity="center"
-            android:hint="Select responsible employee"
+            android:hint="Select Idea creators"
             android:paddingStart="8dp"
             android:textAlignment="viewStart"
             android:textColor="@color/hint_text_color"
