--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/inter_semi_bold"
-            android:text="@string/select_employees"
+            android:text="Select Idea creators"
             android:textColor="@color/md_black"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
