--- a/app/src/main/res/layout/fragment_workorders.xml
+++ b/app/src/main/res/layout/fragment_workorders.xml
@@ -26,7 +26,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/inter_medium"
-                android:text="@string/work_orders"
+                android:text="@string/ideas"
                 android:textColor="@color/md_dark_green"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +128,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="0 Work orders" />
+                tools:text="0 Ideas" />
 
             <TextView
                 android:id="@+id/textViewSortValue"
